resolve N+1 problem when getting products